# gpt_council

./: .gitignore  README.md  agent.ipynb  enviroment.yml  main.py  programmer_direct.md
authentication/: __init__.py  auth_service.py  session_manager.py
chat_manager/: __init__.py  api_response.py  chat_developer_message.py  chat_user_message.py  client_action.py  handler.py  history_manager.py
documentation/: programmer.md
gpt_council/: project_structure.json
gpt_council.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
helpers/: utils.py
models/: __init__.py  model.py  model_config.py  model_config_adapter.py  model_config_director.py  model_director.py
unsaved_changes/save_new/: .gitignore  enviroment.yml  pyproject.toml
unsaved_changes/save_new/gpt_council/: __init__.py  modules.json
